# ops-intel-agent

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  Tauri-README.md  backend_entry.py  docker-compose.yml  pyproject.toml
.github/workflows/: desktop.yml
docs/: desktop-packaging.md
examples/: alert_payload.json  deposition_payload.json
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  styles.css  types.ts
frontend/src/api/: client.ts  settings.ts
frontend/src/composables/: format.ts  status.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/views/: AlertsView.vue  DashboardView.vue  KnowledgeView.vue  SettingsView.vue
ops_intel_agent/: __init__.py  __main__.py  config.py  logging.py  main.py
ops_intel_agent/api/: actions.py  alerts.py  deps.py  health.py  knowledge.py  stats.py
ops_intel_agent/core/: __init__.py  aggregator.py  deposition.py  pipeline.py
ops_intel_agent/db/: base.py  session.py
ops_intel_agent/extractors/: __init__.py  log_parser.py
ops_intel_agent/models/: __init__.py  action.py  alert.py  knowledge.py
ops_intel_agent/prompts/: templates.py
ops_intel_agent/schemas/: __init__.py  action.py  alert.py  knowledge.py  report.py
ops_intel_agent/services/actions/: __init__.py  builtin.py  registry.py
ops_intel_agent/services/embeddings/: __init__.py  base.py  local.py  openai.py
ops_intel_agent/services/llm/: base.py  (+3 more)
scripts/: build_backend.py  fire_demo_alert.py  generate_icons.py  seed_demo.py
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tests/: conftest.py  test_aggregator.py  test_api.py  test_deposition.py  test_embeddings.py  test_extractors.py  test_pipeline.py  test_vectorstore.py  test_vectorstore_chroma.py
(+11 files in other folders)
