[project]
name = "ops-intel-agent"
version = "0.1.0"
description = "Intelligent IT Operations Agent: RAG + LLM for anomaly triage, user-facing translation, and knowledge deposition"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ops Intel Team" }]
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "numpy>=1.26",
    "httpx>=0.28",
    "structlog>=24.4",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "sse-starlette>=2.1",
    "aiosqlite>=0.22.1",
    "greenlet>=3.5.3",
    # Local embedded vector DB (default for dev/test). Fully offline, persists
    # to disk via SQLite + Parquet under OIA_CHROMA_PATH. No external service.
    "chromadb>=0.5.20",
]

[project.optional-dependencies]
prod = [
    "asyncpg>=0.30",
    "pgvector>=0.3.6",
    "openai>=1.55",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ops_intel_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4", "RET"]

# FastAPI's Depends() in argument defaults is idiomatic, not a bug.
[tool.ruff.lint.per-file-ignores]
"ops_intel_agent/api/*.py" = ["B008"]
"tests/*.py" = ["E501", "N802", "S101"]
"scripts/*.py" = ["E501", "T201"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
